Initial version of the SIDR code
This was the code used for the SC 13 experiments.

Signed-off-by: Joe Buck <jbbuck@gmail.com>